fixed styilng issues, overlapping

--- a/styles.css
+++ b/styles.css
@@ -97,10 +97,12 @@ body {
     width: 100%;
 }
 .titleA, .titleA2 {
+    position: absolute;
     height: 100%;
     width: 70%;
     font-size: 3vh;
     padding-left: 2%;
+    top: 0;
     color: white;
     float: left;
     background-color: rgba(255, 255, 255, 0.1);
@@ -109,8 +111,10 @@ body {
 
 .ccontainer {
     display: block;
-    position: relative;
+    position: absolute;
     float: right;
+    top: 0;
+    right: 0;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -172,8 +176,10 @@ body {
   }
 
 .dueA {
+    position: absolute;
     height: 100%;
     width: calc(28% - 4.5vh);
+    left: 72%;
     font-size: 3vh;
     text-align: center;
     color: white;
@@ -227,6 +233,7 @@ body {
     padding-left: 2%;
     padding-bottom: 0.4vh;
     width: 15%;
+    font-size: 1.3vh;
     min-width: 10vw;
     float: left;
 }
